# bitcoin-circle-stark

./: .all-contributorsrc  .codecov.yml  .gitignore  404.html  Cargo.toml  LICENSE  README.md  index.html  primitives.html  print.html  rust-toolchain.toml  searchindex.js  searchindex.json
.cargo-husky/hooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: book.yml  codeql.yml  scorecards.yml  security.yml  test.yml
book/: book.toml
book/src/: README.md  SUMMARY.md  primitives.md
demo/: script.txt  tx-1.txt  tx-10.txt  tx-2.txt  tx-3.txt  tx-4.txt  tx-5.txt  tx-6.txt  tx-7.txt  tx-8.txt  tx-9.txt
src/: channel.rs  channel_commit.rs  channel_extract.rs  circle.rs  fft.rs  fri.rs  lib.rs  merkle_tree.rs  utils.rs
src/air/: bitcoin_script.rs  mod.rs
src/algorithms/: column_line_coeffs.rs  folding.rs  mod.rs  pair_vanishing.rs  point.rs  pow.rs  precomputed_tree.rs  quotient.rs  twin_tree.rs
src/cfri/: channel.rs  circle.rs  fft.rs  fields.rs  fri.rs  mod.rs  utils.rs
src/channel/: bitcoin_script.rs  mod.rs
src/channel_commit/: bitcoin_script.rs  mod.rs
src/channel_extract/: bitcoin_script.rs  mod.rs
src/circle/: bitcoin_script.rs  mod.rs
src/circle_secure/: bitcoin_script.rs  mod.rs
src/constraints/: bitcoin_script.rs  mod.rs
src/dsl/: mod.rs
src/dsl/plonk/: covenant.rs  mod.rs  part1_fiat_shamir1.rs  part2_fiat_shamir2_and_constraint_num.rs  part3_constraint_denom.rs  part4_pair_vanishing_and_alphas.rs  part5_column_line_coeffs1.rs  part6_column_line_coeffs2.rs  part7_column_line_coeffs3.rs  part8_cleanup.rs  per_query_part1_folding.rs  per_query_part2_num_trace.rs  per_query_part3_num_constant.rs  per_query_part4_num_composition.rs  per_query_part5_num_interaction_shifted.rs  per_query_part6_num_interaction1.rs  per_query_part7_num_interaction2.rs  per_query_part8_last_step.rs
src/dsl/plonk/hints/: fiat_shamir.rs  fold.rs  mod.rs  prepare.rs  quotients.rs
src/dsl/primitives/: channel.rs  cm31.rs  cm31_limbs.rs  examples.rs  m31.rs  m31_limbs.rs  mod.rs  qm31.rs  qm31_limbs.rs
src/dsl/primitives/table/: lookup.rs  m31.rs  mod.rs  utils.rs
src/fibonacci/: bitcoin_script.rs  fiat_shamir.rs  fold.rs  mod.rs  prepare.rs  quotients.rs  utils.rs
src/fibonacci/bitcoin_script/: composition.rs  fiat_shamir.rs  fold.rs  mod.rs  prepare.rs  quotients.rs
src/fibonacci/split/: mod.rs
src/fri/: bitcoin_script.rs  mod.rs
src/math/: bitcoin_script.rs  fft.rs  mod.rs
src/merkle_tree/: bitcoin_script.rs  mod.rs  twin_proof.rs
src/merkle_tree/bitcoin_script/: mod.rs  twin_proof.rs
src/merkle_tree_old/: bitcoin_script.rs  mod.rs
src/oods/: bitcoin_script.rs  mod.rs
src/pow/: bitcoin_script.rs  mod.rs
src/precomputed_merkle_tree/: bitcoin_script.rs  constants.rs  mod.rs
src/prover/: channel.rs  circle.rs  fft.rs  fri.rs  mod.rs
src/stwo_fork/: mod.rs
src/stwo_fork/core/: mod.rs
src/stwo_fork/core/prover/: mod.rs
src/tests_utils/: mod.rs  report.rs
src/twiddle_merkle_tree/: bitcoin_script.rs  constants.rs  mod.rs
src/utils/: bitcoin_script.rs  mod.rs
